[gd_scene load_steps=11 format=3 uid="uid://toswubf77db8"]

[ext_resource type="Script" uid="uid://b1xhgfsvi81he" path="res://scripts/experience_orb.gd" id="1_kb7ro"]
[ext_resource type="Shader" uid="uid://1vmi46e8ef4x" path="res://assets/materials/shaders/psx.gdshader" id="2_7ig3s"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2tx8d"]
gravity = Vector3(0, 0, 0)
scale_min = 0.099999994
scale_max = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ra6fx"]
vertex_color_use_as_albedo = true
albedo_color = Color(0.22745098, 0.92156863, 0, 0.6862745)

[sub_resource type="QuadMesh" id="QuadMesh_8rvem"]
material = SubResource("StandardMaterial3D_ra6fx")
size = Vector2(0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gy0td"]
albedo_color = Color(0.1882353, 0.90588236, 0.2, 1)
metallic = 1.0
roughness = 0.4

[sub_resource type="SphereMesh" id="SphereMesh_2tx8d"]
material = SubResource("StandardMaterial3D_gy0td")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rk8h7"]
render_priority = 0
shader = ExtResource("2_7ig3s")
shader_parameter/billboard = false
shader_parameter/tint = Color(1, 1, 0.06666667, 1)
shader_parameter/vertex_snapping = true
shader_parameter/affine_texture_mapping = false
shader_parameter/add_fog = true
shader_parameter/fog_color = Color(0.42, 0.42, 0.45, 1)
shader_parameter/fog_start_end = Vector2(3, 100)
shader_parameter/add_dynamic_vertex_lighting = true
shader_parameter/light_direction = Vector3(0, 1, 1)
shader_parameter/light_intensity = 1.0
shader_parameter/ambient_light = Color(0.10374347, 0.103743546, 0.103743516, 1)
shader_parameter/add_dither = true
shader_parameter/dither_spread = 1.0
shader_parameter/dither_gamma = 0.7

[sub_resource type="SphereShape3D" id="SphereShape3D_ra6fx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_gy0td"]

[node name="ExperienceOrb" type="RigidBody3D" node_paths=PackedStringArray("pickup_range")]
collision_layer = 512
collision_mask = 4
lock_rotation = true
contact_monitor = true
max_contacts_reported = 2
script = ExtResource("1_kb7ro")
pickup_range = NodePath("PickupRange")
xp_value = 10

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
amount = 16
lifetime = 0.3
process_material = SubResource("ParticleProcessMaterial_2tx8d")
draw_pass_1 = SubResource("QuadMesh_8rvem")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
mesh = SubResource("SphereMesh_2tx8d")
surface_material_override/0 = SubResource("ShaderMaterial_rk8h7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
shape = SubResource("SphereShape3D_ra6fx")
debug_fill = false

[node name="PickupRange" type="Area3D" parent="."]
collision_layer = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupRange"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
shape = SubResource("SphereShape3D_gy0td")
debug_fill = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="PickupRange" to="." method="_on_pickup_range_body_entered"]
